fix(ui): decrease gap in results

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ button {
   display: flex;
   justify-content: flex-end;
   align-items: baseline;
-  gap: 1rem;
+  gap: 0.5rem;
 
   font-size: 0.85rem;
 }
